# tdsxtract

./: .buildinfo  .gitignore  Makefile  README.md  coverage.xml  genindex.html  idx.html  index.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  sg_execution_times.html
.github/workflows/: docs_pages_workflow.yml  test.yml
_downloads/e653f4c553733f400ff9fb84b0431359/: plot_tds.ipynb
_modules/: index.html
_modules/tdsxtract/: helpers.html  io.html  models.html  optim.html  stack.html
_sources/: index.rst.txt  quickstart.rst.txt  sg_execution_times.rst.txt
_sources/auto_examples/: index.rst.txt  plot_tds.rst.txt  sg_execution_times.rst.txt
_sources/source/: modules.rst.txt  tdsxtract.rst.txt
auto_examples/: index.html  plot_tds.html  sg_execution_times.html
doc/: Makefile  build.sh  conf.py  index.rst  quickstart.rst  requirements.txt  sg_execution_times.rst
doc/_static/: custom.css
examples/: plot_tds.py
examples/data/: reference.txt  sample.txt
source/: modules.html  tdsxtract.html
tdsxtract/: __about__.py  __init__.py  helpers.py  io.py  models.py  optim.py  stack.py
test/: test_extract.py
